# learning_cpp_vscode

./: README.md
cmake-demo/: CMakeLists.txt  CMakePresets.json  cmake-usage.md  readme.md
cmake-demo/src/: CMakeLists.txt  main.cpp
cmake-demo/src/utils/: CMakeLists.txt
cmake-demo/src/utils/message/: CMakeLists.txt
cmake-demo/src/utils/sort/: CMakeLists.txt
cmake-lib/src/utils/sort/: CMakeLists.txt  sort_algorithms.h
cmake-shared-lib/: CMakeLists.txt  cmake-lib-config.cmake.in  create_shared_lib.md
cmake-shared-lib/src/utils/: CMakeLists.txt
cmake-shared-lib/src/utils/message/: CMakeLists.txt
cmake-shared-lib/src/utils/sort/: sort_algorithms.cpp
cmake-static-lib/: .gitignore  CMakeLists.txt  CMakePresets.json  cmake-static-lib-config.cmake.in  create_static_lib.md
cmake-static-lib/src/: CMakeLists.txt
cmake-static-lib/src/utils/: CMakeLists.txt
cmake-static-lib/src/utils/message/: CMakeLists.txt  message.h
cmake-static-lib/src/utils/sort/: CMakeLists.txt  sort_algorithms.h
cmake-subdir/: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  explain_cmake.md  problem.md
cmake-subdir/cmake/: cmake_uninstall.cmake.in
cmake-subdir/src/: CMakeLists.txt  main.cpp
cmake-subdir/src/linked_list/: CMakeLists.txt  singly_linked_list.cpp  singly_linked_list.h
cmake-subdir/src/utils/: CMakeLists.txt  message.cpp  message.h
cmake-subdir/src/utils/sort/: CMakeLists.txt  sort_algorithms.cpp  sort_algorithms.h
cmake-subdir2/: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  explain_cmake.md  problems.md
cmake-subdir2/src/: CMakeLists.txt  main.cpp
cmake-subdir2/src/linked_list/: singly_linked_list.h
cmake-subdir2/src/utils/: CMakeLists.txt
cmake-subdir2/src/utils/sort/: CMakeLists.txt
cmake-use-lib/: .gitignore  CMakePresets.json  readme.md
cmake-use-lib/src/: main.cpp
cmake-use-shared-lib/: .clangd  .gitignore  CMakeLists.txt  use_shared_lib.md
cmake-use-static-lib/: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  use_static_lib.md
cmake-use-static-lib/src/: main.cpp
cpp21/: .gitignore  CMakeLists.txt
cpp21/cpp17_byte/: main.cpp
cpp21/cpp17_if_switch/: main.cpp
cpp21/cpp17_lambda/: main.cpp
cpp21/cpp17_structured_binding/: main.cpp
cpp21/src/: main.cpp
cppenv/: main.cpp  number.cpp  number.h  point.cpp  point.h
mine-cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  mine-cpp.code-workspace
mine-cpp/src/: main.cpp
mine-cpp/src/byte_demo/: CMakeLists.txt  byte_demo.cpp  byte_demo.h
